fixed alignment

--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -38,20 +38,22 @@
   -o-background-size: cover;
   background-size: cover;
   min-height: 350px;
-  position:relative;
   height:100vh;
+  justify-content: center;
+  align-items: center;
 } 
 .content-container{
   padding:60px 30px;
-  position:absolute;
-  top:0px;
-  
   width: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   
 }
 .main-container > .content-container > h3 {
   white-space: pre-line;
-  font-size: 15px;
+  font-size: 22px;
   font-weight: 300;
   color:white;
   margin-top: 20px;
